@@ -17,18 +17,35 @@ public class ScrollField {
         scroll.setVerticalScrollBarPolicy(VERTICAL_SCROLLBAR_ALWAYS);
     }
 
-    public void setTextScrollField(ArrayList<ArrayList> text, boolean match, ArrayList<Object> names){
+    public void setTextScrollField(ArrayList<ArrayList> text, boolean match, ArrayList<Object> names, GetKeySource getKeySource, GetKeySource selectFromWebsiteFail){
         info = "";
 
         if (text.getFirst().isEmpty()){
             info += "No data avalible\nTry another keySource";
         }
         else if (match){
-            for (int i = 1; i < text.getFirst().size(); i++){
-                info += text.getFirst().get(i) + " | " + text.get(1).get(i) + "\n";
+            if (text.getFirst().get(0).equals(getKeySource.getBox().getSelectedItem()) && text.get(1).get(0).equals(selectFromWebsiteFail.getBox().getSelectedItem())){
+                for (int i = 1; i < text.getFirst().size(); i++){
+                    info += text.getFirst().get(i) + " | " + text.get(1).get(i) + "\n";
+                }
+                info += String.format("%d matches out of %d %s (%.2f%%)",
+                        text.getFirst().size() - 1,
+                        text.getFirst().size() - 1 + names.size(),
+                        getKeySource.getBox().getSelectedItem(),
+                        ((double) text.getFirst().size() / (text.getFirst().size() + names.size()) * 100));
             }
 
-            info += text.getFirst().size()-1 + " matches out of " + (Integer) (text.getFirst().size()-1 + names.size()) + " " + text.getFirst().getFirst() + " " + " (" + (Double.valueOf(((double) text.getFirst().size() /(text.getFirst().size() + names.size())*100)))  + "%";
+            else{
+                for (int i = 0; i < text.getFirst().size(); i++){
+                    info += text.getFirst().get(i) + " | " + text.get(1).get(i) + "\n";
+                }
+                info += String.format("%d matches out of %d %s (%.2f%%)",
+                        text.getFirst().size() - 1,
+                        text.getFirst().size() - 1 + names.size(),
+                        getKeySource.getBox().getSelectedItem(),
+                        ((double) text.getFirst().size() / (text.getFirst().size() + names.size()) * 100));
+            }
+
         }
         else{
             for (int i = 1; i < names.size(); i++){
